<resources>
    <string name="app_name">TradIntro</string>
    <string name="title_activity_splash_screen">TradIntro</string>
    <string name="splash_background">Splash Background</string>
    <string name="hint_username">Username</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_sign_in">SIGN IN</string>
    <string name="hint_forgot_password">Forgot Password?</string>
    <string name="hint_don_t_have_an_account">Don\'t have an account?</string>
    <string name="hint_already_have_an_account">Already a User?</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_sign_in_btn">Sign In</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dot">\u25CF</string>
    <string name="nav_home">Home</string>
    <string name="nav_market">Market</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="nav_portfolio">Portfolio</string>
    <string name="nav_trade">Trade</string>
    <string name="my_portfolio_lbl">My Portfolio</string>
    <string name="portfolio_list_lbl">Portfolio List</string>
    <string name="transaction_list_lbl">Transaction List</string>
    <string name="holding_value_lbl">Holding Value</string>
    <string name="trade_money_balance_lbl">Trade Money Balance</string>
    <string name="trade_money_balance_formatted">Trade Money Balance : <b>%s</b></string>
    <string name="total_investment_lbl">Total Investment</string>
    <string name="total_investment_value_lbl">Total Investment Value</string>
    <string name="plus_buy_lbl">+ Buy</string>
    <string name="buy_lbl">Buy</string>
    <string name="sell_lbl">Sell</string>
    <string name="current_price_lbl">Current Price</string>
    <string name="avg_purchase_price_lbl">Avg Purchase Price</string>
    <string name="purchase_price_lbl">Purchase Price</string>
    <string name="avg_sell_price_lbl">Avg Sell Price</string>
    <string name="total_buy_value_lbl">Total Buy Value</string>
    <string name="total_sell_value_lbl">Total Sell Value</string>
    <string name="total_current_value_lbl">Total Current Value</string>
    <string name="quantity_lbl">Quantity</string>
    <string name="total_price_lbl">Total Price</string>
    <string name="total_value_lbl">Total Value</string>
    <string name="alert_price_lbl">Alert Price</string>
    <string name="watchlist_alert_price_lbl">Watch List Alert Price</string>
    <string name="portfolio_alert_price_lbl">Portfolio Alert Price</string>
    <string name="add_alert_price_lbl">Set Alert Price</string>
    <string name="add_watchlist_alert_price_lbl">Set Watch List Alert Price</string>
    <string name="add_portfolio_alert_price_lbl">Set Portfolio Alert Price</string>
    <string name="modify_alert_price_lbl">Modify Alert Price</string>
    <string name="watchlist_modify_alert_price_lbl">Modify Watch List Alert Price</string>
    <string name="portfolio_modify_alert_price_lbl">Modify Portfolio Alert Price</string>
    <string name="delete_watch_list_ttl">Remove Watch List</string>
    <string name="delete_watch_list_desc">Do you want to remove this stock from watch list?</string>
    <string name="gain_loss_lbl">Gain/Loss</string>
    <string name="per_gain_loss_lbl">% Gain/Loss</string>
    <string name="back_lbl">Back</string>
    <string name="add_stock_lbl">Add Stock</string>
    <string name="exchange_lbl">Exchange </string>
    <string name="stock_name_lbl">Stock Name </string>
    <string name="stock_info_lbl">Stock Info </string>
    <string name="watchlist_price_lbl">Watchlist Price</string>
    <string name="high_lbl">High</string>
    <string name="low_lbl">Low</string>
    <string name="open_lbl">Open</string>
    <string name="close_lbl">Close</string>
    <string name="volume_lbl">Volume</string>
    <string name="lower_circuit_lbl">Lower Circuit</string>
    <string name="upper_circuit_lbl">Upper Circuit</string>
    <string name="avg_traded_lbl">Avg Traded</string>
    <string name="trade_money_lbl">Trade Money</string>
    <string name="trade_money_hint">1234567890</string>
    <string name="voucher_code_hint">************</string>
    <string name="recharge_amount_lbl">Recharge Amount (Rs.)</string>
    <string name="recharge_amount_hint"> </string>
    <string name="recharge_lbl">Recharge</string>
    <string name="redeem_lbl">Redeem</string>
    <string name="redeem_form_lbl">Redeem Voucher</string>
    <string name="voucher_code_lbl">Voucher Code</string>
    <string name="voucher_trade_money_lbl">Voucher Trade Money</string>
    <string name="current_password_lbl">Current Password</string>
    <string name="new_password_lbl">New Password</string>
    <string name="confirm_password_lbl">Confirm New Password</string>
    <string name="balance_lbl">Balance</string>
    <string name="balance_info_lbl">Wallet Info</string>
    <string name="last_allocation_on_lbl">Last Recharge On</string>
    <string name="last_allocation_amount_lbl">Last Recharge Amount</string>
    <string name="user_name_pass_required_msg">Enter your email id and password.</string>
    <string name="no_internet_error">No internet</string>
    <string name="rs_format">\u20B9 %.2f</string>
    <string name="rs_format_string">\u20B9 %1$S</string>
    <string name="per_format">%.2f \%%</string>
    <string name="per_format_string">%1$s \%%</string>
    <string name="holding_value_per_format"> %1$.2f (%2$.2f\%%)</string>
    <string name="points_format"> %.2f Pts</string>
    <string name="watchlist_price_date_format">%1$.2f, %2$s</string>
    <string name="equality_place_order_lbl">Equality Place Order</string>
    <string name="order_type_lbl">Order Type</string>
    <string name="order_validity_lbl">Order Validity</string>
    <string name="order_validity_date_lbl">Validity Date</string>
    <string name="limited_prize_lbl">Limit Price</string>
    <string name="charges_lbl">Charges</string>
    <string name="buy_amount_lbl">Buy Amount</string>
    <string name="colon_lbl">:</string>
    <string name="limit_lbl">Limit</string>
    <string name="day_lbl">Day</string>
    <string name="gtd_lbl">GTD</string>
    <string name="gtc_lbl">GTC</string>
    <string name="redeem_voucher_lbl">Redeem Voucher</string>
    <string name="markets">Markets</string>
    <string name="filter">Filter</string>
    <string name="catagories">Categories</string>
    <string name="sort_by">sort by</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string-array name="marketList">
        <item>catagories</item>
        <item>Item One</item>
        <item>Item Two</item>
        <item>Item Three</item>
    </string-array>
    <string name="watchlist" translatable="false">+ Watchlist</string>
    <string name="summary"><b>Summary</b></string>
    <string name="Rs">\u20B9</string>
    <string name="welcome_user">Welcome User</string>
    <string name="current_point">Current Points : </string>
    <string name="last_login">Last Login</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="level_format">Level %d</string>
    <string name="welcome_user_name">Welcome %s</string>
    <string name="my_profile_lbl">My Profile</string>
    <string name="my_referrals_lbl">My Referrals</string>
    <string name="my_skill_board_lbl">My Skill Board</string>
    <string name="recharge_summary_lbl">Recharge Summary</string>
    <string name="recharge_trade_money_lbl">Recharge Trade Money</string>
    <string name="notification_lbl">Notification</string>
    <string name="reports_lbl">Reports</string>
    <string name="alerts_lbl">Alerts</string>
    <string name="change_password_lbl">Change Password</string>
    <string name="logout_lbl">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail_id">Mail Id</string>
    <string name="phone_num">Phone Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="level_desc">You are in the Level %d. Unlock next levels to enjoy \n new features and explore more on trading</string>
    <string name="string_features_unlocked">Features Unlocked !!!</string>
    <string name="required_points">Required Points :  %.2f Pts</string>
    <string name="watchList"><b>WatchList</b></string>
    <string name="watch_list_label">Watch List</string>
    <string name="alert_price_label">Alert Price</string>
    <string name="order_stock">Order Stock</string>
    <string name="equity_place_order_lbl">Equity Place Order</string>
    <string name="sell_stock">Sell Stock</string>
    <string name="usable_balance">Usable Balance</string>
    <string name="nodata">No data available</string>
    <string name="notification_delete_msg">Notification deleted successfully</string>
    <string name="name">Name</string>
    <string name="invite_user">Invite User</string>
    <string name="email">Email ID</string>
    <string name="invite">Invite</string>
    <string name="invited_list">Invited List</string>
    <string name="server_error">Server Error</string>
    <string name="hello">hello</string>
    <string name="email_value">email@gmail.com</string>
    <string name="trade_money">Trade money</string>
    <string name="voucher_code">Voucher code</string>
    <string name="notification_permission_denied_msg">You will not receive any notification from us because of no permission</string>
    <string name="channel_description">This channel is used to send the notification related to Trade Intro app</string>
    <string name="enter_emailid">Enter your email id</string>
    <string name="enter_reg_emailid">Enter your registered email id</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Re-enter your password</string>
    <string name="password_not_match_msg">Password does not match</string>
    <string name="ok">OK</string>
    <string name="verify_email">Success! Reset password link has been sent to your email. Please check your email.</string>
    <string name="verify_account">Success! Email verification has been sent to your email. Please check your email.</string>
    <string name="verify_account_fail">Sorry! Unable to sent email verification, please try again.</string>
    <string name="verify_email_error">Error! Invalid email address.</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="register_lbl">Register</string>
    <string name="full_name_lbl">Full Name</string>
    <string name="email_lbl">E-mail</string>
    <string name="tnc_lbl">By Signing up you agree to our <a href="https://www.tradintro.com/index.php/pages/terms_and_conditions">terms of conditions</a></string>
    <string name="check_email">Please verify your email to continue, verification email has been sent to your registered email id.</string>
    <string name="profit_loss_report_lbl">Profit &amp; Loss Report</string>
    <string name="trade_book_lbl">Trade Book</string>
    <string name="order_book_lbl">Order Book</string>
    <string name="historical_holdings_lbl">Historical Holdings</string>
    <string name="stock_lbl">Stock</string>
    <string name="last_transaction_date_lbl">Last Transaction Date</string>
    <string name="activity">Activity</string>
    <string name="level">Level</string>
    <string name="points_earned">Points Earned</string>
    <string name="date">Date</string>
    <string name="detailed_points_summary">Detailed Points Summary</string>
</resources>