<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_wallet"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/wallet"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_notification"
        android:title="@string/notification_lbl"
        app:actionLayout="@layout/feed_update_count"
        app:showAsAction="always"
        android:clickable="false"/>
</menu>