<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="level"
            type="com.techxform.tradintro.feature_main.data.remote.dto.Level" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_16sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="@dimen/_16ssp"
            android:text="@string/detailed_points_summary"
            android:textSize="@dimen/_16ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_26sdp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/points_earned"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>
    </LinearLayout>
</layout>