<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".feature_main.presentation.register.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:theme="@style/Theme.TradIntro.Ext"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/registerLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/register_lbl"
            android:textColor="@color/blue"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name"
            app:helperText="@string/app_name"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_medium"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:singleLine="true"
                android:imeOptions="actionNext"
                android:fontFamily="@font/open_sans_medium"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/email_lbl"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_medium"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:fontFamily="@font/open_sans_medium"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/hint_password"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_medium"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/emailTl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:fontFamily="@font/open_sans_medium"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/confirm_password_lbl"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_medium"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:fontFamily="@font/open_sans_medium"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            style="@style/Theme.TradIntro.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/pink_circular_bg"
            android:text="@string/register_lbl"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassTl" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tncTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tnc_lbl"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_medium"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tncTv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/hint_already_have_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_sign_in_btn"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>


        <include
            android:id="@+id/progressBar"
            layout="@layout/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>